Fix: fixed irregularities in visible sections on scroll

--- a/src/components/LandingPage/Benefits/Benefits.module.css
+++ b/src/components/LandingPage/Benefits/Benefits.module.css
@@ -1,5 +1,5 @@
 .benefits_section_wrapper {
-  padding: 60px 80px 0;
+  padding: 60px 80px 20px;
 }
 .benefits_container {
   padding: 0 !important;
@@ -11,6 +11,6 @@
 
 @media screen  and (max-width: 689px) {
     .benefits_section_wrapper{
-        padding: 0px 30px;
+        padding: 80px 30px 20px;
     }
 }
