--- a/src/components/LandingPage/HowItWorks/HowitWorks.module.css
+++ b/src/components/LandingPage/HowItWorks/HowitWorks.module.css
@@ -10,6 +10,6 @@
   
   @media screen  and (max-width: 689px) {
       .howitworks_section_wrapper{
-          padding: 60px 30px 10px;
+          padding: 80px 30px 20px;
       }
   }
