--- a/src/components/LandingPage/OurStory/OurStory.module.css
+++ b/src/components/LandingPage/OurStory/OurStory.module.css
@@ -1,5 +1,5 @@
 .our_story_section_wrapper {
-  padding: 60px 80px 0px;
+  padding: 60px 80px 20px;
 }
 
 .our_story_header h3 {
@@ -39,7 +39,7 @@
 }
 @media screen and (max-width: 689px) {
   .our_story_section_wrapper {
-    padding: 40px 30px 0px;
+    padding: 80px 30px 20px;
   }
 
 }
