--- a/src/components/LandingPage/OurTeam/OurTeam.module.css
+++ b/src/components/LandingPage/OurTeam/OurTeam.module.css
@@ -1,5 +1,5 @@
 .our_team_section_wrapper {
-  padding: 60px 80px 40px;
+  padding: 60px 80px 20px;
   background-color: #000000;
   color: #ffffff;
   margin: 10px 0;
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 689px) {
   .our_team_section_wrapper {
-    padding: 40px 30px;
+    padding: 80px 30px 20px;
   }
   .our_team_row_wrapper{
       flex-direction: column;
